--- a/index.html
+++ b/index.html
@@ -4,17 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Recipes</title>
 </head>
 <body>
-    <h1>
-        Odin Recipes
-    </h1>
+
+    <h1>Irina's Recipe Collection</h1>
+    
+    <p class="intro">Not only do I love to eat, I also love to cook. 
+        That is, I love to create meals that are simple, accessible, 
+        and most importantly, delicious. Here are some of my favorites. 
+        Enjoy! 
+    </p>
+
+    <img src="cooking.png">
+
     <ul>
         <li><a href="recipes/pbtofu.html">Peanut Butter Tofu</a></li>
         <li><a href="recipes/tsochickpeas.html">General Tso's Chickpeas</a></li>
         <li><a href="recipes/bananabread.html">Banana Bread</a></li>
     </ul>
+
     
 </body>
 </html>
