--- a/index.html
+++ b/index.html
@@ -7,24 +7,25 @@
     <link rel="stylesheet" href="style.css">
     <title>Recipes</title>
 </head>
-<body>
-
-    <h1>Irina's Recipe Collection</h1>
-    
-    <p class="intro">Not only do I love to eat, I also love to cook. 
-        That is, I love to create meals that are simple, accessible, 
-        and most importantly, delicious. Here are some of my favorites. 
-        Enjoy! 
-    </p>
-
-    <img src="cooking.png">
-
-    <ul>
-        <li><a href="recipes/pbtofu.html">Peanut Butter Tofu</a></li>
-        <li><a href="recipes/tsochickpeas.html">General Tso's Chickpeas</a></li>
-        <li><a href="recipes/bananabread.html">Banana Bread</a></li>
-    </ul>
-
-    
+<body>  
+    <div class="content-box">
+        <h1>Irina's Recipe Collection</h1>
+        <p class="description">Not only do I love to eat, I also love to cook. 
+            That is, I love to create meals that are simple, accessible, 
+            and most importantly, delicious. Here are some of my favorites. 
+            Enjoy! 
+        </p>
+        <div class="body1">
+            <img class="homepic" src="cooking.png">
+                <div class="body2">
+                    <h3>Click for Recipes</h3>
+                    <ul class="recipe-list">
+                        <li><a href="recipes/pbtofu.html">Peanut Butter Tofu</a></li>
+                        <li><a href="recipes/tsochickpeas.html">General Tso's Chickpeas</a></li>
+                        <li><a href="recipes/bananabread.html">Banana Bread</a></li>
+                    </ul>
+                </div>
+        </div>
+</div>
 </body>
 </html>
