--- a/recipes/bananabread.html
+++ b/recipes/bananabread.html
@@ -8,24 +8,28 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Banana Bread</h1>
-    <img src="nanabread.jpeg">
-    <h3>This banana bread recipe creates the most delicious, moist loaf with loads of banana flavor</h3>
-    <h2>Ingredients</h2>
-    <ul>
-        <li>2 cups all-purpose flour</li>
-        <li>1 teaspoon baking soda</li>
-        <li>¼ teaspoon salt</li>
-        <li>¾ cup brown sugar</li>
-        <li>½ cup butter</li>
-        <li>2 eggs, beaten</li>
-        <li>2 ⅓ cups mashed overripe bananas</li>
-    </ul>
-    <h2>Steps</h2>
-    <ol>
-        <li>Preheat the oven to 350 degrees F (175 degrees C). Lightly grease a 9x5-inch loaf pan.</li>
-        <li>Combine flour, baking soda, and salt in a large bowl. Beat brown sugar and butter with an electric mixer in a separate large bowl until smooth. Stir in eggs and mashed bananas until well blended. Stir banana mixture into flour mixture until just combined. Pour batter into the prepared loaf pan.</li>
-        <li>Bake in the preheated oven until a toothpick inserted into the center comes out clean, about 60 minutes. Let bread cool in pan for 10 minutes, then turn out onto a wire rack to cool completely.</li>
-    </ol>
+    <a href="../index.html">Home</a>
+
+    <div class="content-box">
+        <h1>Banana Bread</h1>
+        <img src="nanabread.jpeg">
+        <h3>This banana bread recipe creates the most delicious, moist loaf with loads of banana flavor.</h3>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>2 cups all-purpose flour</li>
+            <li>1 teaspoon baking soda</li>
+            <li>¼ teaspoon salt</li>
+            <li>¾ cup brown sugar</li>
+            <li>½ cup butter</li>
+            <li>2 eggs, beaten</li>
+            <li>2 ⅓ cups mashed overripe bananas</li>
+        </ul>
+        <h2>Steps</h2>
+        <ol>
+            <li>Preheat the oven to 350 degrees F (175 degrees C). Lightly grease a 9x5-inch loaf pan.</li>
+            <li>Combine flour, baking soda, and salt in a large bowl. Beat brown sugar and butter with an electric mixer in a separate large bowl until smooth. Stir in eggs and mashed bananas until well blended. Stir banana mixture into flour mixture until just combined. Pour batter into the prepared loaf pan.</li>
+            <li>Bake in the preheated oven until a toothpick inserted into the center comes out clean, about 60 minutes. Let bread cool in pan for 10 minutes, then turn out onto a wire rack to cool completely.</li>
+        </ol>
+    </div>
 </body>
 </html>
